去除Java11 var 特性